Added a titled border around "show" panel in control panel
Renamed and ordered "show" buttons in control panel
Removed "to scale" button
Initial support for different modes
Fixed: force vectors do not update while the sim is paused
# 0.0.03 (45917) Nov 10, 2010
Added feasibility test for simsharing
# 0.0.02 (45729) Nov 4, 2010
Many improvements for the second version
# 0.0.01 (45696) Nov 3, 2010